Update release site

--- a/README.qmd
+++ b/README.qmd
@@ -1,6 +1,42 @@
-
+---
+format: gfm
+default-image-extension: ''
+knitr:
+  opts_chunk:
+    collapse: true
+    tidy: "styler"
+    comment: "#>"
+    fig.path: "pkgdown/assets/README-"
+    warning: false
+    message: false
+    dev: "ragg_png"
+    dpi: 300
+    out.width: "100%"
+---
 
 <!-- README.md is generated from README.qmd. Please edit that file -->
+
+```{r}
+#| include: false
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  tidy = "styler",
+  comment = "#>",
+  fig.path = "pkgdown/assets/README-",
+  warning = FALSE,
+  message = FALSE,
+  dev = "ragg_png",
+  dpi = 300,
+  out.width = "100%"
+)
+
+v <- packageDescription("tidyterra")$Version
+is_dev <- length(unlist(strsplit(v, ".", fixed = TRUE))) > 3
+
+base_url <- ifelse(is_dev, "https://dieghernan.github.io/tidyterra/dev",
+  "https://dieghernan.github.io/tidyterra"
+)
+```
 
 # tidyterra <a href="https://dieghernan.github.io/tidyterra/"><img src="man/figures/logo.png" alt="tidyterra website" align="right" height="139"/></a>
 
@@ -16,8 +52,8 @@ results](https://badges.cranchecks.info/worst/tidyterra.svg)](https://cran.r-pro
 [![codecov](https://codecov.io/gh/dieghernan/tidyterra/branch/main/graph/badge.svg?token=blvDmRjcfb)](https://app.codecov.io/gh/dieghernan/tidyterra)
 [![CodeFactor](https://www.codefactor.io/repository/github/dieghernan/tidyterra/badge)](https://www.codefactor.io/repository/github/dieghernan/tidyterra)
 [![r-universe](https://dieghernan.r-universe.dev/badges/tidyterra)](https://dieghernan.r-universe.dev/tidyterra)
-[![Project Status: Active – The project has reached a stable, usable
-state and is being actively
+[![Project Status: Active -- The project has reached a stable, usable state and
+is being actively
 developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![Stack Exchange
 questions](https://img.shields.io/stackexchange/stackoverflow/t/tidyterra?logo=stackoverflow&label=stackoverflow%20q%26a)](https://stackoverflow.com/questions/tagged/tidyterra)
@@ -32,17 +68,16 @@ readr-devel](https://github.com/dieghernan/tidyterra/actions/workflows/check-dpl
 
 <!-- badges: end -->
 
-The goal of **tidyterra** is to provide common methods of the
-[**tidyverse** packages](https://tidyverse.org/packages/) for objects
-created with the [**terra**](https://CRAN.R-project.org/package=terra)
-package: `SpatRaster` and `SpatVector`. It also provides `geoms` for
-plotting these objects with
+The goal of **tidyterra** is to provide common methods of the [**tidyverse**
+packages](https://tidyverse.org/packages/) for objects created with the
+[**terra**](https://CRAN.R-project.org/package=terra) package: `SpatRaster` and
+`SpatVector`. It also provides `geoms` for plotting these objects with
 [**ggplot2**](https://ggplot2.tidyverse.org/).
 
 Please cite **tidyterra** as:
 
-Hernangómez, D., (2023). Using the tidyverse with terra objects: the
-tidyterra package. *Journal of Open Source Software*, *8*(91), 5751,
+Hernangómez, D., (2023). Using the tidyverse with terra objects: the tidyterra
+package. *Journal of Open Source Software*, *8*(91), 5751,
 <https://doi.org/10.21105/joss.05751>.
 
 A BibTeX entry for LaTeX users is:
@@ -64,30 +99,30 @@ A BibTeX entry for LaTeX users is:
 
 ## Overview
 
-The full manual of the most recent release of **tidyterra** on **CRAN**
-is online: <https://dieghernan.github.io/tidyterra/>
+The full manual of the most recent release of **tidyterra** on **CRAN** is
+online: <https://dieghernan.github.io/tidyterra/>
 
-**tidyverse** methods implemented on **tidyterra** work differently
-depending on the type of `Spat*` object:
+**tidyverse** methods implemented on **tidyterra** work differently depending on
+the type of `Spat*` object:
 
-- `SpatVector`: the methods are implemented using
-  `terra::as.data.frame()` coercion. Rows correspond to geometries and
-  columns correspond to attributes of the geometry.
+-   `SpatVector`: the methods are implemented using `terra::as.data.frame()`
+    coercion. Rows correspond to geometries and columns correspond to attributes
+    of the geometry.
 
-- `SpatRaster`: The implementation on `SpatRaster` objects differs,
-  since the methods could be applied to layers or to cells.
-  **tidyterra**’s overall approach is to treat the layers as columns of
-  a tibble and the cells as rows (i.e. `select(SpatRaster, 1)` would
-  select the first layer of a `SpatRaster`).
+-   `SpatRaster`: The implementation on `SpatRaster` objects differs, since the
+    methods could be applied to layers or to cells. **tidyterra**'s overall
+    approach is to treat the layers as columns of a tibble and the cells as rows
+    (i.e. `select(SpatRaster, 1)` would select the first layer of a
+    `SpatRaster`).
 
-The methods implemented return the same type of object used as input,
-unless the expected behavior of the method is to return another type of
-object (for example, `as_tibble()` would return a tibble).
+The methods implemented return the same type of object used as input, unless the
+expected behavior of the method is to return another type of object (for
+example, `as_tibble()` would return a tibble).
 
 Current methods and functions provided by **tidyterra** are:
 
 | tidyverse method | `SpatVector` | `SpatRaster` |
-|----|----|----|
+|---------------------------|---------------------------|---------------------------|
 | `tibble::as_tibble()` | ✔️ | ✔️ |
 | `dplyr::select()` | ✔️ | ✔️ Select layers |
 | `dplyr::mutate()` | ✔️ | ✔️ Create /modify layers |
@@ -118,49 +153,45 @@ Current methods and functions provided by **tidyterra** are:
 | `generics::glance()` | ✔️ | ✔️ |
 | `generics::required_pkgs()` | ✔️ | ✔️ |
 
-> [!NOTE]
->
-> ### A note on performance
->
-> **tidyterra** is conceived as a user-friendly wrapper of **terra**
-> using the **tidyverse** methods and verbs. This approach therefore has
-> a **cost in terms of performance**.
->
-> If you are a **heavy user** of **terra** or you need to work with
-> **big raster files**, **terra** is much more performant. When
-> possible, each function of **tidyterra** refers to its equivalent on
-> **terra**.
->
-> As a rule of thumb if your raster has less than 10,000,000 data slots
-> counting cells and layers
-> (i.e. `terra::ncell(your_rast)*terra::nlyr(your_rast) < 10e6`) you are
-> good to go with **tidyterra**.
->
-> When plotting rasters, resampling is performed automatically (as
-> `terra::plot()` does, see the help page). You can adjust this with the
-> `maxcell` argument.
+::: callout-note
+## A note on performance
+
+**tidyterra** is conceived as a user-friendly wrapper of **terra** using the
+**tidyverse** methods and verbs. This approach therefore has a **cost in terms
+of performance**.
+
+If you are a **heavy user** of **terra** or you need to work with **big raster
+files**, **terra** is much more performant. When possible, each function of
+**tidyterra** refers to its equivalent on **terra**.
+
+As a rule of thumb if your raster has less than 10,000,000 data slots counting
+cells and layers (i.e. `terra::ncell(your_rast)*terra::nlyr(your_rast) < 10e6`)
+you are good to go with **tidyterra**.
+
+When plotting rasters, resampling is performed automatically (as `terra::plot()`
+does, see the help page). You can adjust this with the `maxcell` argument.
+:::
 
 ## Installation
 
-<div class="pkgdown-release">
-
+::: pkgdown-release
 Install **tidyterra** from
 [**CRAN**](https://CRAN.R-project.org/package=tidyterra):
 
-``` r
+```{r}
+#| eval: false
 install.packages("tidyterra")
 ```
+:::
 
-</div>
-
-<div class="pkgdown-devel">
-
+::: pkgdown-devel
 Check the docs of the developing version in
 <https://dieghernan.github.io/tidyterra/dev/>
 
 You can install the developing version of **tidyterra** like so:
 
-``` r
+```{r}
+#| eval: false
 # install.packages("pak")
 pak::pak("dieghernan/tidyterra")
 ```
@@ -168,7 +199,8 @@ pak::pak("dieghernan/tidyterra")
 Alternatively, you can install **tidyterra** using the
 [r-universe](https://dieghernan.r-universe.dev/tidyterra):
 
-``` r
+```{r}
+#| eval: false
 # Enable this universe
 install.packages(
   "tidyterra",
@@ -178,17 +210,18 @@ install.packages(
   )
 )
 ```
-
-</div>
+:::
 
 ## Example
 
 ### `SpatRasters`
 
-This is a basic example which shows you how to manipulate and plot
-`SpatRaster` objects:
+This is a basic example which shows you how to manipulate and plot `SpatRaster`
+objects:
 
-``` r
+```{r}
+#| label: example-temp
+#| fig-show: hide
 library(tidyterra)
 library(terra)
 
@@ -196,15 +229,6 @@ library(terra)
 rastertemp <- rast(system.file("extdata/cyl_temp.tif", package = "tidyterra"))
 
 rastertemp
-#> class       : SpatRaster 
-#> size        : 87, 118, 3  (nrow, ncol, nlyr)
-#> resolution  : 3881.255, 3881.255  (x, y)
-#> extent      : -612335.4, -154347.3, 4283018, 4620687  (xmin, xmax, ymin, ymax)
-#> coord. ref. : World_Robinson 
-#> source      : cyl_temp.tif 
-#> names       :   tavg_04,   tavg_05,  tavg_06 
-#> min values  :  1.885463,  5.817587, 10.46338 
-#> max values  : 13.283829, 16.740898, 21.11378
 
 # Rename
 rastertemp <- rastertemp |>
@@ -229,9 +253,21 @@ ggplot() +
   )
 ```
 
-<img src="https://dieghernan.github.io/tidyterra/README-example-temp-1.png" alt="Average temperature in Castille and Leon, Spain" width="100%" />
+```{r}
+#| echo: false
+#| results: asis
+img_url <- file.path(base_url, "README-example-temp-1.png")
+cat(
+  paste0(
+    '<img src="', img_url, '" alt="Average temperature in ',
+    'Castille and Leon, Spain" width="100%" />'
+  )
+)
+```
 
-``` r
+```{r}
+#| label: example-temp2
+#| fig-show: hide
 # Create maximum differences of two months
 variation <- rastertemp |>
   mutate(diff = June - May) |>
@@ -258,12 +294,24 @@ ggplot(prov) +
   )
 ```
 
-<img src="https://dieghernan.github.io/tidyterra/README-example-temp2-1.png" alt="Variation of temperature in Castille and Leon, Spain" width="100%" />
+```{r}
+#| echo: false
+#| results: asis
+img_url <- file.path(base_url, "README-example-temp2-1.png")
+cat(
+  paste0(
+    '<img src="', img_url, '" alt="Variation of temperature in ',
+    'Castille and Leon, Spain" width="100%" />'
+  )
+)
+```
 
-**tidyterra** also provides a geom for plotting RGB `SpatRaster` tiles
-with **ggplot2**:
+**tidyterra** also provides a geom for plotting RGB `SpatRaster` tiles with
+**ggplot2**:
 
-``` r
+```{r}
+#| label: example-tile
+#| fig-show: hide
 rgb_tile <- rast(system.file("extdata/cyl_tile.tif", package = "tidyterra"))
 
 ggplot(prov) +
@@ -274,12 +322,25 @@ ggplot(prov) +
   coord_sf(crs = 3857, datum = 3857)
 ```
 
-<img src="https://dieghernan.github.io/tidyterra/README-example-tile-1.png" alt="Example: Plotting a tile in tidyterra" width="100%" />
+```{r}
+#| echo: false
+#| results: asis
+img_url <- file.path(base_url, "README-example-tile-1.png")
+cat(
+  paste0(
+    '<img src="', img_url, '" alt="Example: Plotting a tile in tidyterra"',
+    ' width="100%" />'
+  )
+)
+```
 
-**tidyterra** provides specific scales for plotting hypsometric maps
-with **ggplot2**:
+**tidyterra** provides specific scales for plotting hypsometric maps with
+**ggplot2**:
 
-``` r
+```{r}
+#| label: hypso
+#| fig-asp: 0.65
+#| fig-show: hide
 asia <- rast(system.file("extdata/asia.tif", package = "tidyterra"))
 
 ggplot() +
@@ -304,14 +365,26 @@ ggplot() +
   )
 ```
 
-<img src="https://dieghernan.github.io/tidyterra/README-hypso-1.png" alt="Hypsometric map of Asia" width="100%" />
+```{r}
+#| echo: false
+#| results: asis
+img_url <- file.path(base_url, "README-hypso-1.png")
+cat(
+  paste0(
+    '<img src="', img_url, '" alt="Hypsometric map of Asia"',
+    ' width="100%" />'
+  )
+)
+```
 
 ### `SpatVectors`
 
-This is a basic example which shows you how to manipulate and plot
-`SpatVector` objects:
+This is a basic example which shows you how to manipulate and plot `SpatVector`
+objects:
 
-``` r
+```{r}
+#| label: spatvec
+#| fig-show: hide
 vect(system.file("ex/lux.shp", package = "terra")) |>
   mutate(pop_dens = POP / AREA) |>
   glimpse() |>
@@ -322,21 +395,19 @@ vect(system.file("ex/lux.shp", package = "terra")) |>
     title = "Population density of Luxembourg",
     subtitle = "By canton"
   )
-#> #  A SpatVector 12 x 7
-#> #  Geometry type: Polygons
-#> #  Geodetic CRS: lon/lat WGS 84 (EPSG:4326)
-#> #  Extent (x / y) : ([5° 44' 38.9" E / 6° 31' 41.71" E] , [49° 26' 52.11" N / 50° 10' 53.84" N])
-#> 
-#> $ ID_1     <dbl> 1, 1, 1, 1, 1, 2, 2, 2, 3, 3, 3, 3
-#> $ NAME_1   <chr> "Diekirch", "Diekirch", "Diekirch", "Diekirch", "Diekirch", "…
-#> $ ID_2     <dbl> 1, 2, 3, 4, 5, 6, 7, 12, 8, 9, 10, 11
-#> $ NAME_2   <chr> "Clervaux", "Diekirch", "Redange", "Vianden", "Wiltz", "Echte…
-#> $ AREA     <dbl> 312, 218, 259, 76, 263, 188, 129, 210, 185, 251, 237, 233
-#> $ POP      <dbl> 18081, 32543, 18664, 5163, 16735, 18899, 22366, 29828, 48187,…
-#> $ pop_dens <dbl> 57.95192, 149.27982, 72.06178, 67.93421, 63.63118, 100.52660,…
 ```
 
-<img src="https://dieghernan.github.io/tidyterra/README-spatvec-1.png" alt="A SpatVector plotted with tidyterra" width="100%" />
+```{r}
+#| echo: false
+#| results: asis
+img_url <- file.path(base_url, "README-spatvec-1.png")
+cat(
+  paste0(
+    '<img src="', img_url, '" alt="A SpatVector plotted with tidyterra"',
+    ' width="100%" />'
+  )
+)
+```
 
 ## I need your feedback
 
@@ -345,18 +416,15 @@ Please leave your feedback or open an issue on
 
 ## Need help?
 
-Check our
-[FAQs](https://dieghernan.github.io/tidyterra/articles/faqs.html) or
+Check our [FAQs](https://dieghernan.github.io/tidyterra/articles/faqs.html) or
 open a new [issue](https://github.com/dieghernan/tidyterra/issues)!
 
-You can also ask in [Stack Overflow](https://stackoverflow.com/) using
-the tag
+You can also ask in [Stack Overflow](https://stackoverflow.com/) using the tag
 [\[tidyterra\]](https://stackoverflow.com/questions/tagged/tidyterra).
 
 ## Acknowledgement
 
-**tidyterra**’s **ggplot2** geoms are based on
-[**ggspatial**](https://github.com/paleolimbot/ggspatial)
-implementation, by [Dewey Dunnington](https://github.com/paleolimbot)
-and [**ggspatial**
+**tidyterra**'s **ggplot2** geoms are based on
+[**ggspatial**](https://github.com/paleolimbot/ggspatial) implementation, by
+[Dewey Dunnington](https://github.com/paleolimbot) and [**ggspatial**
 contributors](https://github.com/paleolimbot/ggspatial/graphs/contributors).
