--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -908,3 +908,14 @@
 	doi          = {10.1186/s40462-026-00626-0},
 	issn         = {2051-3933}
 }
+@article{https://doi.org/10.1002/esp4.70013,
+author = {Schmidt, Jonathan and Dashti, Shideh and Torres-Machi, Cristina},
+title = {Next-Generation Probabilistic Liquefaction Model Building at the Regional Scale},
+journal = {Earthquake Spectra},
+volume = {42},
+number = {1},
+pages = {e70013},
+keywords = {Bayesian statistics, geotechnical earthquake engineering, probabilistic modeling, seismic soil liquefaction, spatial statistics},
+doi = {10.1002/esp4.70013},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/esp4.70013},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/esp4.70013}}
