--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -914,6 +914,7 @@ title = {Next-Generation Probabilistic Liquefaction Model Building at the Region
 journal = {Earthquake Spectra},
 volume = {42},
 number = {1},
+year = {2026},
 pages = {e70013},
 keywords = {Bayesian statistics, geotechnical earthquake engineering, probabilistic modeling, seismic soil liquefaction, spatial statistics},
 doi = {10.1002/esp4.70013},
